# mpss-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.md
cmake/: BuildConfig.cmake
include/: CloudInfoFetcher.hpp  ContentDownloader.hpp  ICloudInfoFetcher.hpp  mpssexport.hpp
include/mpss/: CloudInfoFetcher.hpp  ContentDownloader.hpp  ICloudInfoFetcher.hpp
scripts/: build_win_msvc2022.cmd
src/: CloudInfoFetcher.cpp  ContentDownloader.cpp
test/: TestContentDownloader.hpp  longjson.hpp  main.cpp
